--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.navLink {
+  color: black;
+  margin: 5px;
+  font-weight: bold;
+  padding: 5px;
+  background-color: white;
+  border-radius: 3px;
+}
+
+.logout:hover {
+  cursor: pointer;
+}
+
+.homepage {
+  background-image: url("../assets/IMG-0026.jpeg");
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
 }
